[package]
name = "bulletin-chain-zombienet-sdk-tests"
version = "0.1.0"
description = "Zombienet-sdk tests for Polkadot Bulletin Chain"
authors.workspace = true
edition.workspace = true
publish = false
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
anyhow = "1"
blake2 = "0.10"
cid = "0.11"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
multihash = "0.19"
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
twox-hash = "2"

# Zombienet SDK
zombienet-sdk = "0.3.13"
zombienet-orchestrator = "0.3.13"

# Subxt for transaction submission (must match zombienet-sdk's version)
subxt = { version = "0.43", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.43", features = ["sr25519"] }

# For bitswap client
litep2p = { version = "0.12", features = ["websocket"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

[features]
zombie-sync-tests = []

[build-dependencies]
prost-build = "0.13"
