[package]
name = "rust-authorize-and-store"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "authorize-and-store"
path = "src/main.rs"

[dependencies]
bulletin-sdk-rust = { path = "../../sdk/rust", default-features = false, features = ["std"] }
clap = { version = "4.2", features = ["derive"] }
subxt = { version = "0.37", features = ["substrate-compat"] }
subxt-signer = { version = "0.37", features = ["sr25519", "subxt"] }
# Use matching sp-runtime from git to ensure type compatibility with SDK
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "81a3af9830ea8b6ff64b066b73b04bb3b675add5" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
hex = "0.4"
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
scale-info = "2.11"

# Patch to resolve unicode-normalization conflict
# subxt 0.37 requires =0.1.22 via parity-bip39 2.0.1
# polkadot-sdk requires ^0.1.22 (locked to 0.1.25) via bip39 2.2.2
# Use git source to override crates.io version
[patch.crates-io]
unicode-normalization = { git = "https://github.com/unicode-rs/unicode-normalization.git", tag = "0.1.22" }
