[package]
name = "pallets-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "Apache-2.0"
description = "Common utilities for pallets and/or runtime"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

polkadot-sdk-frame = { workspace = true, default-features = false, features = [
	"runtime",
] }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk-frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
]
try-runtime = [
	"polkadot-sdk-frame/try-runtime",
]
