[package]
name = "pallet-hop-promotion"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Pallet for promoting HOP pool data to permanent chain storage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-storage = { workspace = true }
polkadot-sdk-frame = { workspace = true, default-features = false, features = [
	"runtime",
] }
scale-info = { features = ["derive"], workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
transaction-storage-primitives = { workspace = true }

[dev-dependencies]
pallets-common = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-storage/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"transaction-storage-primitives/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"polkadot-sdk-frame/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"polkadot-sdk-frame/try-runtime",
	"sp-runtime/try-runtime",
]
